# LightningBoltSimulation

./: .git_credentials  .gitconfig  .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md
src/: main.cpp  main.cpp~  simulation_defines.hpp
src/logs/: basic_log.txt
src/memory/: CMakeLists.txt  CMakeLists.txt~  cell.cpp  cell.hpp  cell.hpp~  domain.cpp  domain.cpp~  domain.hpp  domain.hpp~  init_domain.cpp  init_domain.hpp
src/memory/initial_conditions/: CMakeLists.txt  initial_conditions.cpp  initial_conditions.hpp
src/outputData/: 10jun2023_data.csv
src/pde_solver/: CMakeLists.txt  pde_solver.cpp  pde_solver.cpp~  pde_solver.hpp  pde_solver.hpp~
src/pde_solver/poisson_equations/: CMakeLists.txt  poisson_equations.cpp  poisson_equations.hpp
src/pythonPlotting/: plotting.py
test/: CMakeLists.txt  test_main.cpp
test/test_main/: CMakeLists.txt
test/test_memory/: CMakeLists.txt  test_memory_domain.cpp
test/test_pde_solver/: CMakeLists.txt  test_pde_solver.cpp
